--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "vue-router": "^4.2.1"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.7.13",
+    "@heroicons/vue": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
